--- a/EFBCode/index.html
+++ b/EFBCode/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>D3Times</title>
+  <title>2017 Census and Debt</title>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -27,7 +27,14 @@
     <div class="row">
       <div class="col-xs-12 col-md-12">
         <div id="scatter">
-          <!-- We append our chart here. -->
+          <!-- We append our first chart here. -->
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-md-12">
+        <div id="scatter2">
+          <!-- We append our second chart here. -->
         </div>
       </div>
     </div>
@@ -51,6 +58,8 @@
     </div>
   </div>
 
+  
+
   <!-- Footer-->
   <div id="footer">
     <p>The Coding Boot Camp&copy;2016</p>
@@ -58,6 +67,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
+  <script type="text/javascript" src="assets/js/app2.js"></script>
 </body>
 
 </html>
