--- a/Erin's Code/index.html
+++ b/Erin's Code/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>NYC Boroughs</title>
+    <title>Poverty and Unemployment Demographics</title>
 
     <!-- Leaflet JS & CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
