Updating my files for Monday Work

--- a/Erin's Code/index.html
+++ b/Erin's Code/index.html
@@ -27,7 +27,7 @@
     <!-- API key -->
     <!-- <script type="text/javascript" src="static/js/config.js"></script> -->
       <!-- JS  -->
-    <script type="text/javascript" src="mapping.js"></script>
+    <script type="text/javascript" src="mapping2.js"></script>
     <script src="out.geojson"></script>
     <
 
