replaced lorem ipsum with observations on data

--- a/EFBCode/index.html
+++ b/EFBCode/index.html
@@ -41,17 +41,22 @@
     <div class="row">
       <div class="col-xs-12 col-md-12" >
         <div class="article">
-          <h2>Correlations Discovered Between Lorem Ipsum</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Hendrerit gravida rutrum quisque non tellus orci ac auctor. Nunc mattis enim ut tellus elementum. Nec nam aliquam sem et tortor. Diam donec adipiscing tristique risus nec feugiat in fermentum. </p>
+          <h2>2017 Correlations to Population?</h2>
+          <p>Average poverty rate by county/state does not have a noticeble trend uo or down to overall state population. However, as the poulation increases, we may be seeing some convergence to a median value.   </p>
 
-          <h4> Lorem Ipsum:  dolor sit amet</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.   </p>
+          <h4> District of Columbia:</h4> The District of Columbia is not a state, and compared to the states, appears to be a unique outlier. Perhaps the data would be better captured as part of Maryland.
+          <h5>D.C. Notes:</h5>
+          <ol>
+          <li>One of the highest per capita incomes</li>
+          <li>One of the highest unemployment rates</li>
+          <li>High student debt rate (21% student debt)</li>
+          <li>Midrange medical debt (33%)</li>
+          <li>Auto debt rate is low. Is auto ownership low in the area?  A study of auto debt rates to availability of public transportation options might be interesting. </li>
+          </ol>
+          </p>
 
-          <h4> Lorem Ipsum:  dolor sit amet</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.   </p>
-
-          <h4> Lorem Ipsum:  dolor sit amet</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.   </p>
+          <h4> Debt to Income:</h4>
+          <p>Auto debt and student debt do not appear to correlate to household income. Medical debt appears to trend down as household income increases. Further investigation into medical insurance coverage might shed more light on this statistic. </p>
 
         </div>
       </div>
