--- a/EFBCode/index.html
+++ b/EFBCode/index.html
@@ -42,7 +42,7 @@
       <div class="col-xs-12 col-md-12" >
         <div class="article">
           <h2>2017 Correlations to Population?</h2>
-          <p>Average poverty rate by county/state does not have a noticeble trend uo or down to overall state population. However, as the poulation increases, we may be seeing some convergence to a median value.   </p>
+          <p>Average poverty rate by county/state does not have a noticeable trend up or down to overall state population. However, as the population increases, we may be seeing some convergence to a median value.   </p>
 
           <h4> District of Columbia:</h4> The District of Columbia is not a state, and compared to the states, appears to be a unique outlier. Perhaps the data would be better captured as part of Maryland.
           <h5>D.C. Notes:</h5>
